--- a/MediaBrowser.WebDashboard/dashboard-ui/css/librarymenu.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/css/librarymenu.css
@@ -199,6 +199,10 @@
     background-color: #121212;
 }
 
+    .viewMenuBar.semiTransparent {
+        background-color: rgba(18, 18, 18, .8);
+    }
+
 .paperLibraryViewNav {
     background-color: transparent !important;
 }
