--- a/MediaBrowser.WebDashboard/dashboard-ui/themes/ios.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/themes/ios.css
@@ -12,6 +12,10 @@ html, body, .ui-btn, .pageTitle {
     background-color: rgba(28,28,28,.97);
 }
 
+    .viewMenuBar.semiTransparent {
+        background-color: rgba(28, 28, 28, .8);
+    }
+
 .backdropPage.ui-page-theme-b {
     background-color: rgba(28,28,28,.92) !important;
 }
