--- a/MediaBrowser.WebDashboard/dashboard-ui/themes/ios.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/themes/ios.css
@@ -50,6 +50,10 @@ html, body, .ui-btn, .pageTitle {
     margin: 0 auto 6px;
 }
 
+.libraryViewNav paper-tabs iron-icon {
+    margin: 6px auto 6px;
+}
+
 .libraryViewNav #selectionBar {
     background-color: transparent !important;
 }
