update live tv image

--- a/MediaBrowser.WebDashboard/dashboard-ui/css/card.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/css/card.css
@@ -62,6 +62,10 @@
     background-color: #333;
 }
 
+.homeTopViews .cardImage {
+    border-radius: 6px;
+}
+
 .cardOverlayPlayButton {
     position: absolute;
     bottom: 0;
