--- a/MediaBrowser.WebDashboard/dashboard-ui/themes/ios.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/themes/ios.css
@@ -141,6 +141,13 @@ paper-tab {
         padding: 0;
     }
 
+.cardBox {
+    margin: 5px;
+}
+
+.cardImage {
+    border-radius: 10px;
+}
 
 .viewMenuSearch {
     background: #1c1c1c;
