--- a/MediaBrowser.WebDashboard/dashboard-ui/css/mediaplayer.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/css/mediaplayer.css
@@ -4,7 +4,7 @@
 }
 
 .nowPlayingText {
-    display: inline-block;
+    display: inline-block;.
     font-weight: normal;
     position: relative;
     top: -7px;
@@ -16,6 +16,15 @@
     text-align: left;
     font-size: 15px;
     max-width: 130px;
+}
+
+.mediaButton.infoButton iron-icon {
+    width: 34px;
+    height: 34px;
+}
+
+.mediaButton.active {
+    color: #2ad;
 }
 
 @media (min-width: 500px) {
