--- a/MediaBrowser.WebDashboard/dashboard-ui/css/site.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/css/site.css
@@ -429,6 +429,42 @@ h1 a:hover {
     margin: -10px 0 0 -10px;
 }
 
+input:not(.paper-input):not(.likePaperText):not([type='checkbox']):not([type='radio']) {
+    -webkit-appearance: none;
+    -webkit-font-smoothing: antialiased;
+    -webkit-rtl-ordering: logical;
+    -webkit-user-select: text;
+    box-sizing: border-box;
+    font-family: inherit;
+    font-size: inherit;
+    height: 28.5938px;
+    letter-spacing: normal;
+    line-height: 18.2px;
+    list-style-image: none;
+    list-style-position: outside;
+    list-style-type: none;
+    min-height: 28.6px;
+    padding-bottom: 5.2px;
+    padding-left: 5.2px;
+    padding-right: 5.2px;
+    padding-top: 5.2px;
+    text-align: left;
+    text-indent: 0px;
+    text-rendering: auto;
+    text-shadow: none;
+    text-transform: none;
+    white-space: nowrap;
+    word-spacing: 0px;
+    writing-mode: lr-tb;
+    -webkit-writing-mode: horizontal-tb;
+    background: white;
+    width: 100%;
+    border: 1px solid #ccc;
+    color: #000;
+    margin: 0 0 3px 0;
+    border-radius: 4px;
+}
+
 .smoothScrollX {
     overflow-x: scroll;
     -webkit-overflow-scrolling: touch;
