--- a/MediaBrowser.WebDashboard/dashboard-ui/css/site.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/css/site.css
@@ -295,7 +295,6 @@
 
 /* jQuery mobile adds a text shadow that seems unnecessary. */
 * {
-    text-shadow: none !important;
     -webkit-font-smoothing: antialiased;
 }
 
@@ -304,10 +303,11 @@ html {
     -ms-touch-action: manipulation;
     touch-action: manipulation;
     /* Prevent white flickering */
-    background-color: #262626;
+    background-color: #242424;
     /* Normalize for different browsers */
     margin: 0;
     padding: 0;
+    height: 100%;
 }
 
 body {
@@ -323,6 +323,7 @@ body {
     /* Normalize for different browsers */
     margin: 0;
     padding: 0;
+    height: 100%;
 }
 
 /* Without this, no content will be displayed in mobile safari */
@@ -781,8 +782,8 @@ paper-input + .fieldDescription {
     box-shadow: -3px 0 10px 0 #555;*/
 }
 
-.ui-page-theme-a {
-    background: #f5f5f5;
+.background-theme-a {
+    background-color: #f5f5f5;
 }
 
     .ui-page-theme-a .content-secondary {
